--- a/.github/workflows/cookieless.yml
+++ b/.github/workflows/cookieless.yml
@@ -15,9 +15,11 @@ jobs:
       - name: Publish Docker image
         run: sbt 'project stdout; set Docker / version := "0.0.0"' docker:publishLocal
       - name: Run Docker image
-        run: docker run -d -v "$PWD"/.github/workflows/ssc-collector-config:/snowplow/config -p 12345:12345 snowplow/scala-stream-collector-stdout:0.0.0 --config /snowplow/config/config_good.hocon
+        run: docker run --name collector -d -v "$PWD"/.github/workflows/ssc-collector-config:/snowplow/config -p 12345:12345 snowplow/scala-stream-collector-stdout:0.0.0 --config /snowplow/config/config_good.hocon
       - name: Allow time for collector to start
-        run: sleep 30
+        run: |
+          sleep 30
+          docker logs collector
       - name: Test non-anonymous tracking
         id: non-anonymous
         run: |
