--- a/.github/workflows/kafka-test.yml
+++ b/.github/workflows/kafka-test.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Send good events
         run: |
           while read p; do
-            curl -X POST -i http://0.0.0.0:12345/com.snowplowanalytics.snowplow/tp2  -d "$p"
+            curl -X POST -i http://0.0.0.0:12345/com.snowplowanalytics.snowplow/tp2 -d "$p"
           done <"$PWD"/.github/workflows/integration_tests/data.txt
         shell: bash
       - name: Check number of events in the good topic
@@ -57,7 +57,9 @@ jobs:
           docker run --network="integration_net1" --name collector -d -v "$PWD"/.github/workflows/kafka-collector-config:/snowplow/config -p 12345:12345 snowplow/scala-stream-collector-kafka:0.0.0 --config /snowplow/config/config_good.hocon
           sleep 15
       - name: Send oversized event to collector
-        run: curl -X POST -i http://0.0.0.0:12345/com.snowplowanalytics.snowplow/tp2 -d "$(openssl rand -base64 1000000)"
+        run: |
+          echo "$(openssl rand -base64 1000000)" > /tmp/data.txt
+          curl -X POST -i http://0.0.0.0:12345/com.snowplowanalytics.snowplow/tp2 -d @/tmp/data.txt
       - name: Consume bad event from Kafka
         run: docker exec -w /bin broker kafka-run-class.sh kafka.tools.GetOffsetShell --broker-list 0.0.0.0:9092 --topic bad | grep 'bad:0:1'
       - name: Stop Docker containers
