--- a/.github/workflows/kafka-test.yml
+++ b/.github/workflows/kafka-test.yml
@@ -29,6 +29,8 @@ jobs:
             curl -X POST -i http://0.0.0.0:12345/com.snowplowanalytics.snowplow/tp2 -d "$p"
           done <"$PWD"/.github/workflows/integration_tests/data.txt
         shell: bash
+      - name: Wait for events to be sent from the collector to Kafka
+        run: sleep 5
       - name: Check number of events in the good topic
         run: docker exec -w /bin broker kafka-run-class.sh kafka.tools.GetOffsetShell --broker-list 0.0.0.0:9092 --topic good | grep 'good:0:55'
       - name: Check no events got to the bad topic
@@ -59,7 +61,9 @@ jobs:
       - name: Send oversized event to collector
         run: |
           echo "$(openssl rand -base64 1000000)" > /tmp/data.txt
-          curl -X POST -i http://0.0.0.0:12345/com.snowplowanalytics.snowplow/tp2 -d @/tmp/data.txt
+          curl -X POST -i http://0.0.0.0:12345/com.snowplowanalytics.snowplow/tp2 -d "@/tmp/data.txt"
+      - name: Wait for event to be sent from the collector to Kafka
+        run: sleep 5
       - name: Consume bad event from Kafka
         run: docker exec -w /bin broker kafka-run-class.sh kafka.tools.GetOffsetShell --broker-list 0.0.0.0:9092 --topic bad | grep 'bad:0:1'
       - name: Stop Docker containers
