--- a/.github/workflows/no-data-loss.yml
+++ b/.github/workflows/no-data-loss.yml
@@ -38,11 +38,14 @@ jobs:
 
       - name: Start collector
         run: |
+          echo "$PWD"
           docker run --network no_data_loss_default --rm -d -v "$PWD"/collector_config:/snowplow/config -p 12345:12345 -e AWS_ACCESS_KEY_ID="$AWS_ACCESS_KEY_ID" -e AWS_SECRET_KEY="$AWS_SECRET_ACCESS_KEY" snowplow/scala-stream-collector-kinesis:0.0.0 --config /snowplow/config/config.hocon
           sleep 30
 
       - name: Send test events
-        run: python3 "$PWD"/test/input/send.py "$PWD"/test/input/data.txt
+        run: |
+          echo "$PWD"
+          python3 "$PWD"/test/input/send.py "$PWD"/test/input/data.txt
 
       - name: Read events from good stream
         id: check
