Set AWS_EC2_METADATA_DISABLED=true

--- a/.github/workflows/no-data-loss.yml
+++ b/.github/workflows/no-data-loss.yml
@@ -5,6 +5,7 @@ on: push
 env:
   AWS_ACCESS_KEY_ID: "test"
   AWS_SECRET_ACCESS_KEY: "test"
+  AWS_EC2_METADATA_DISABLED: true
 
 jobs:
   run_test:
