Specify AWS region

--- a/.github/workflows/no-data-loss.yml
+++ b/.github/workflows/no-data-loss.yml
@@ -6,6 +6,7 @@ env:
   AWS_ACCESS_KEY_ID: "test"
   AWS_SECRET_ACCESS_KEY: "test"
   AWS_EC2_METADATA_DISABLED: true
+  AWS_REGION: "eu-central-1"
 
 jobs:
   run_test:
