--- a/.github/workflows/no-data-loss.yml
+++ b/.github/workflows/no-data-loss.yml
@@ -62,4 +62,6 @@ jobs:
         run: docker stop "$(docker ps | grep snowplow/scala-stream-collector-kinesis:0.0.0 | awk '{print $1}')"
 
       - name: Stop localstack
-        run: docker-compose down
+        run: |
+          cd .github/workflows/integration_tests/no_data_loss
+          docker-compose down
