Don't use custom staging dir for Docker

--- a/.github/workflows/integration_tests/no_data_loss/docker-compose.yml
+++ b/.github/workflows/integration_tests/no_data_loss/docker-compose.yml
@@ -19,7 +19,7 @@ services:
       - snowplow
 
   snowplow.collector:
-    build: ./docker/stage
+    build: ../../../../kinesis/target/docker/stage
     ports:
       - "12345:12345"
     volumes:
