PubSub: add integration tests (close #274)

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,7 +12,9 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 11
-      - name: Run tests
-        run: sbt test
       - name: Check formatting
         run: sbt scalafmtCheckAll
+      - name: Run unit tests
+        run: sbt test
+      - name: Run integration tests PubSub
+        run: sbt "project pubsubDistroless" IntegrationTest/test
