Put MaxBytes in default application.conf instead of hard coding it (close #272)

--- a/kinesis/src/main/resources/application.conf
+++ b/kinesis/src/main/resources/application.conf
@@ -13,6 +13,8 @@ collector {
         minBackoff = 3000
         maxBackoff = 600000
       }
+
+      sqsMaxBytes = 192000
     }
 
     buffer {
@@ -20,7 +22,9 @@ collector {
       recordLimit = 500
       timeLimit = 5000
     }
-   }
+  }
+
+  maxBytes = 1000000
 }
 
 
