--- a/pubsub/src/main/resources/application.conf
+++ b/pubsub/src/main/resources/application.conf
@@ -20,7 +20,9 @@ collector {
           recordLimit = 40
           timeLimit = 1000
         }
-   }
+    }
+
+    maxBytes = 10000000
 }
 
 akka {
