Put MaxBytes in default application.conf instead of hard coding it (close #272)

--- a/pubsub/src/main/resources/application.conf
+++ b/pubsub/src/main/resources/application.conf
@@ -13,6 +13,8 @@ collector {
             maxRpcTimeout = 10000
             rpcTimeoutMultiplier = 2
           }
+
+          maxBytes = 10000000
         }
 
         buffer {
@@ -20,7 +22,7 @@ collector {
           recordLimit = 40
           timeLimit = 1000
         }
-   }
+    }
 }
 
 akka {
