--- a/rabbitmq/src/main/resources/application.conf
+++ b/rabbitmq/src/main/resources/application.conf
@@ -8,6 +8,8 @@ collector {
         maxBackoff = 10000
         multiplier = 2
       }
+
+      maxBytes = 128000000
     }
 
     buffer {
@@ -15,9 +17,8 @@ collector {
       recordLimit = 500
       timeLimit = 5000
     }
-   }
+  }
 }
-
 
 akka {
   loglevel = WARNING
