--- a/sqs/src/main/resources/application.conf
+++ b/sqs/src/main/resources/application.conf
@@ -13,6 +13,8 @@ collector {
         minBackoff = 3000
         maxBackoff = 600000
       }
+
+      maxBytes = 192000
     }
 
     buffer {
@@ -20,7 +22,7 @@ collector {
       recordLimit = 500
       timeLimit = 5000
     }
-   }
+  }
 }
 
 akka {
