--- a/stdout/src/main/resources/application.conf
+++ b/stdout/src/main/resources/application.conf
@@ -4,6 +4,7 @@ collector {
 
     sink {
       enabled = stdout
+      maxBytes = 1000000000
     }
 
     buffer {
@@ -11,7 +12,7 @@ collector {
       recordLimit = 500
       timeLimit = 5000
     }
-   }
+  }
 }
 
 akka {
