--- a/kinesis/src/main/resources/application.conf
+++ b/kinesis/src/main/resources/application.conf
@@ -13,6 +13,9 @@ collector {
         minBackoff = 3000
         maxBackoff = 600000
       }
+
+      maxBytes = 1000000
+      sqsMaxBytes = 192000
     }
 
     buffer {
@@ -20,7 +23,8 @@ collector {
       recordLimit = 500
       timeLimit = 5000
     }
-   }
+  }
+
 }
 
 
