--- a/nsq/src/main/resources/application.conf
+++ b/nsq/src/main/resources/application.conf
@@ -4,6 +4,7 @@ collector {
       enabled = nsq
       threadPoolSize = 10
       port = 4150
+      maxBytes = 1000000
     }
 
     buffer {
@@ -11,7 +12,7 @@ collector {
       recordLimit = 500
       timeLimit = 5000
     }
-   }
+  }
 }
 
 
