Update /sink-health endpoint logic (close #276)

--- a/kinesis/src/main/resources/application.conf
+++ b/kinesis/src/main/resources/application.conf
@@ -16,6 +16,8 @@ collector {
 
       maxBytes = 1000000
       sqsMaxBytes = 192000
+
+      startupCheckInterval = 1 second
     }
 
     buffer {
