--- a/pubsub/src/main/resources/application.conf
+++ b/pubsub/src/main/resources/application.conf
@@ -15,6 +15,8 @@ collector {
           }
 
           maxBytes = 10000000
+
+          startupCheckInterval = 1 second
         }
 
         buffer {
