Make MaxRetries configurable (close #295)

--- a/sqs/src/main/resources/application.conf
+++ b/sqs/src/main/resources/application.conf
@@ -10,8 +10,9 @@ collector {
       }
 
       backoffPolicy {
-        minBackoff = 3000
-        maxBackoff = 600000
+        minBackoff = 500
+        maxBackoff = 1500
+        maxRetries = 3
       }
 
       maxBytes = 192000
