PubSub: add second layer of retry (close #304)

--- a/pubsub/src/main/resources/application.conf
+++ b/pubsub/src/main/resources/application.conf
@@ -17,6 +17,7 @@ collector {
           maxBytes = 10000000
 
           startupCheckInterval = 1 second
+          retryInterval = 10 seconds
         }
 
         buffer {
