Address review feedback

--- a/http4s/src/main/resources/reference.conf
+++ b/http4s/src/main/resources/reference.conf
@@ -46,7 +46,7 @@ collector {
   }
 
   cors {
-    accessControlMaxAge = 60 minutes
+    accessControlMaxAge = 60 seconds
   }
 
   streams {
@@ -80,4 +80,6 @@ collector {
   enableDefaultRedirect = false
 
   redirectDomains = []
+
+  shutdownTimeout = 5 minutes
 }
