--- a/pubsub/src/main/resources/application.conf
+++ b/pubsub/src/main/resources/application.conf
@@ -1,7 +1,10 @@
 {
     streams {
+        //New object-like style
+        good = ${streams.sink} 
+        bad = ${streams.sink} 
+        
         sink {
-          enabled = google-pub-sub
           threadPoolSize = 10
 
           backoffPolicy {
@@ -18,6 +21,7 @@
 
           startupCheckInterval = 1 second
           retryInterval = 10 seconds
+          buffer = ${streams.buffer}
         }
 
         buffer {
