Update the Pubsub UserAgent format (close #362)

--- a/pubsub/src/main/resources/application.conf
+++ b/pubsub/src/main/resources/application.conf
@@ -18,6 +18,9 @@ collector {
 
           startupCheckInterval = 1 second
           retryInterval = 10 seconds
+          gcpUserAgent {
+            productName = "Snowplow OSS"
+          }
         }
 
         buffer {
