--- a/kafka/src/main/resources/application.conf
+++ b/kafka/src/main/resources/application.conf
@@ -11,6 +11,11 @@ collector {
       retries = 10
       maxBytes = 1000000
       buffer = ${collector.streams.buffer}
+      producerConf = {
+        "security.protocol" = "SASL_SSL"
+        "sasl.mechanism" = "OAUTHBEARER"
+        "sasl.jaas.config": "org.apache.kafka.common.security.oauthbearer.OAuthBearerLoginModule required;"
+      }
     }
 
     //Legacy style
