collector-kafka: authenticate with Event Hubs using OAuth2 via MSI (close #401)

--- a/kafka/src/main/resources/application.conf
+++ b/kafka/src/main/resources/application.conf
@@ -11,6 +11,12 @@ collector {
       retries = 10
       maxBytes = 1000000
       buffer = ${collector.streams.buffer}
+      producerConf = {
+        "security.protocol" = "SASL_SSL"
+        "sasl.mechanism" = "OAUTHBEARER"
+        "sasl.jaas.config": "org.apache.kafka.common.security.oauthbearer.OAuthBearerLoginModule required;"
+        "sasl.login.callback.handler.class": "com.snowplowanalytics.snowplow.collectors.scalastream.sinks.AzureAuthenticationCallbackHandler"
+      }
     }
 
     //Legacy style
