Add an option to send HSTS header (fix #408)

--- a/core/src/main/resources/reference.conf
+++ b/core/src/main/resources/reference.conf
@@ -86,6 +86,11 @@
     port = 443
   }
 
+  hsts {
+    enable = false
+    maxAge = 365 days
+  }
+
   networking {
     maxConnections = 1024
     idleTimeout = 610 seconds
