Cross compile to scala 2.12
This is implemented, because we need both Collector and Enrich in Micro. It turns out it's easier to ad cross compile to 2.12 in Collector, than upgrade Enrich to 2.13. This should be temporary solution, we need to have everything running on 2.13 eventually.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Check formatting
         run: sbt scalafmtCheckAll
       - name: Run unit tests
-        run: sbt test
+        run: sbt +test
       - name: Run integration tests Kinesis
         run: sbt "project kinesisDistroless" IntegrationTest/test
       - name: Run integration tests PubSub
