Add timeout for body parsing
For a long-running connections (for example ones coming from a load-balancer),
we used to wait for body text stream to complete and therefore hanged the
request infinitely. This caused performance issues.
Now, we detect if there was no activity for a given body text for the period
of time and short-circuit the processing early.
We extend timeout in testing to accomodate for virtual environment performance.

--- a/core/src/main/resources/reference.conf
+++ b/core/src/main/resources/reference.conf
@@ -94,6 +94,8 @@
   networking {
     maxConnections = 1024
     idleTimeout = 610 seconds
+    responseHeaderTimeout = 2 seconds
+    bodyReadTimeout = 500 millis
   }
 
   enableDefaultRedirect = false
