--- a/core/src/main/resources/reference.conf
+++ b/core/src/main/resources/reference.conf
@@ -98,6 +98,14 @@
     bodyReadTimeout = 500 millis
   }
 
+  debug {
+    http {
+      enable = false
+      logHeaders = true
+      logBody = false
+      redactHeaders = []
+    }
+  }
   enableDefaultRedirect = false
   preTerminationPeriod = 10 seconds
 
