--- a/core/src/main/resources/reference.conf
+++ b/core/src/main/resources/reference.conf
@@ -96,6 +96,8 @@
     idleTimeout = 610 seconds
     responseHeaderTimeout = 2 seconds
     bodyReadTimeout = 500 millis
+    maxRequestLineLength = 20480
+    maxHeadersLength = 40960
   }
 
   debug {
