Add dirty warmup
This adds a simplistic, dirty warmup requests to health endpoint

--- a/core/src/main/resources/reference.conf
+++ b/core/src/main/resources/reference.conf
@@ -111,6 +111,11 @@
 
   experimental {
     backend = blaze
+    warmup {
+      enable = false
+      numRequests = 2000
+      maxCycles = 3
+    }
   }
 
   enableDefaultRedirect = false
