--- a/core/src/main/resources/reference.conf
+++ b/core/src/main/resources/reference.conf
@@ -94,10 +94,11 @@
   networking {
     maxConnections = 1024
     idleTimeout = 610 seconds
-    responseHeaderTimeout = 5 seconds
-    bodyReadTimeout = 1 second
+    responseHeaderTimeout = 30 seconds
+    bodyReadTimeout = 28 seconds
     maxRequestLineLength = 20480
     maxHeadersLength = 40960
+    maxPayloadSize = 1048576 # 1MB
   }
 
   debug {
