Add limit for payload allowed sizes
Previously it was possible to send arbitrarily large payloads at the collector.
Now, we add two mechanisms of handling large requests.
First, `networking.maxPayloadSize` (defaulting to 1048576 = 1MB) will stream the
input and generate SizeViolation bad event.
Second, `networking.dropPayloadSize` (defaulting to 2097152 = 2MB) will return
HTTP 413 and will not attempt to process the request.

The two mechanisms come hand in hand allowing for setting a safe but tolerant
configuration.
If requests exceed `sink.maxBytes` the collector will attempt to split them as
separate events. However, if payload is bigger than `maxPayloadSize`, parsing the
body is risky and in case of an attack may result in failures. The collector
will not attempt to parse the request and split it up but will generate a
SizeViolation bad event. But if payload exceeds `dropPayloadSize` the request
will not be handled and no bad event is going to be emitted. Instead HTTP 413 is generated.

--- a/core/src/main/resources/reference.conf
+++ b/core/src/main/resources/reference.conf
@@ -97,6 +97,8 @@
     responseHeaderTimeout = 30 seconds
     maxRequestLineLength = 20480
     maxHeadersLength = 40960
+    maxPayloadSize = 1048576  # 1MB
+    dropPayloadSize = 2097152 # 2MB
   }
 
   enableDefaultRedirect = false
