--- a/.github/workflows/telemetryIntegTest.yml
+++ b/.github/workflows/telemetryIntegTest.yml
@@ -12,6 +12,8 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 11
+      - name: Install sbt
+        uses: sbt/setup-sbt@v1
       - name: Set up python
         uses: actions/setup-python@v2
         with:
