--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -64,6 +64,8 @@ jobs:
             run_snyk: ${{ !contains(github.ref, 'rc') }}
           - platform: pubsub
             run_snyk: ${{ !contains(github.ref, 'rc') }}
+          - platform: kafka
+            run_snyk: ${{ !contains(github.ref, 'rc') }}
 
     steps:
       - uses: actions/checkout@v2
